--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "henrikhj/api2postnordcomfindnearbyservicepoints",
+    "name": "henrikhj/api2.postnord.com-find-nearby-service-points",
     "type": "library",
     "description": "PostNord service point locator",
     "keywords": ["api2.postnord.com - Find nearby service points","API","SDK"],
